[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "Flask",
    "Flask-SQLAlchemy",
    "flask_migrate",
    "psycopg2",
    "click",
    "requests",
    "werkzeug",
    "flask_httpauth",
    "Flask-Login",
    "python-Levenshtein",
    "pytest"
]
build-backend = "setuptools.build_meta"

[project]
name = "COMSW4111"
version = "0.1.0"
description = "COMSW4111"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Flask==2.2.2",
    "Werkzeug==2.2.2",
    "Flask-SQLAlchemy==3.0.2",
    "Flask-Login==0.6.2",
    "flask_httpauth==4.7.0",
    "flask_migrate==4.0.4",
    "flask-wtf==1.1.1",
    "psycopg2==2.9.5",
    "click",
    "requests",
    "urllib3==1.26.6",
    "python-Levenshtein",
    "pytest"
]
authors = [
    {name = "Christopher Webb", email = "cdw2146@columbia.edu"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.license]
file = "LICENSE"

[project.urls]
repository = "https://github.com/chriswebb09/COMSW4111"

[project.optional-dependencies]
develop = [
    "black>=22",
    "bump2version>=1.0.0",
    "check-manifest",
    "flake8>=3.7.8",
    "flake8-black>=0.2.1",
    "flake8-pyproject",
    "mypy",
    "pytest",
    "requests",
    "pytest-cov",
    "twine",
    "wheel",
]




[tool.black]
color = true
line-length = 120
target-version = ["py310"]
skip-string-normalization = true

[tool.check-manifest]
ignore = ["Assets/*"]

[tool.flake8]
ignore = ["E203", "W503", "F401"]
max-line-length = 120
exclude = ["tests/*"]

[tool.isort]
line_length = 120
known_first_party = "pydantic"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.mypy]
python_version = "3.10"
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
testpaths = "tests/"

[tool.setuptools]
py-modules = []